# OOP-course-work

./: .gitignore  CMakeLists.txt  Constants.h  DBWorker.cpp  DBWorker.h  Exceptions.cpp  Exceptions.h  README.md  Tests.cpp  db.sqlite3  main.cpp  utils.cpp  utils.h
Models/: Date.cpp  DateManager.cpp  Model.h  ModelManager.h  Person.cpp  PersonManager.cpp
controllers/: AddDwellingController.cpp  AddDwellingController.h  AddPersonController.cpp  AddPersonController.h  CRUD.h  Controller.cpp  Controller.h  DisplayDwellingsController.cpp  DisplayDwellingsController.h  DisplayPeopleController.cpp  DisplayPeopleController.h  DwellingController.cpp  DwellingController.h  MainScreenController.cpp  MainScreenController.h  ManageDwellingsController.cpp  ManageDwellingsController.h  ManagePeopleController.cpp  ManagePeopleController.h  ManageQueueController.cpp  ManageQueueController.h  SearchDwellingController.cpp  SearchDwellingController.h  SearchPeopleController.cpp  SearchPeopleController.h
documentation/: Diagram.drawio
models/: Dwelling.cpp  Dwelling.h  DwellingManager.cpp  DwellingManager.h  Filter.cpp  Filter.h  Model.h  ModelManager.h  Person.cpp  Person.h  PersonInQueue.cpp  PersonInQueue.h  PersonInQueueManager.cpp  PersonInQueueManager.h  PersonManager.cpp  PersonManager.h  QueueDwelling.cpp  QueueDwelling.h
views/: AddDwellingView.cpp  AddDwellingView.h  ChooseDwellingView.cpp  ChooseDwellingView.h  DisplayDwellingsView.cpp  DisplayDwellingsView.h  DisplayPeopleView.cpp  DisplayPeopleView.h  DisplayQueueView.cpp  DisplayQueueView.h  DwellingView.cpp  MainView.h  (+11 more)
(+3 files in other folders)
